hms parser still dev, parsing simulation associated files.

--- a/dev/hms/hms_parser.ipynb
+++ b/dev/hms/hms_parser.ipynb
@@ -341,20 +341,197 @@
     "            sim_json = json.load(f)\n",
     "# model_template_json\n",
     "# keys to drop from json template\n",
-    "drop_keys = ['_id', 'linked_resources', 'common_parameters', 'common_software_version', 'authors', \n",
-    "'spatial_extent_resolved', 'spatial_valid_extent_resolved', 'temporal_extent', 'temporal_resolution', \n",
-    "'spatial_valid_extent', 'common_files_details', 'grid']\n",
+    "drop_keys = ['_id', 'model_application' 'linked_resources', 'input_files', 'output_files', 'type']\n",
     "for key in drop_keys:\n",
     "    del sim_json[key]\n",
     "\n",
     "\n",
     "\n",
     "# set basic keywords\n",
-    "sim_json['keywords'] = ['hec-hms','hec','hms','hydrology','model','lwi']\n",
+    "sim_json['keywords'] = ['hec-hms','hec','hms','hydrology','simulation','lwi']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Run: August 2016',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: August_2016.log',\n",
+       "  '     DSS File: August_2016.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 31 January 2023',\n",
+       "  '     Last Execution Time: 20:11:32',\n",
+       "  '     Basin: Consensus (Generic)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: Aug2016',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:'],\n",
+       " ['Run: Barry',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: Barry.log',\n",
+       "  '     DSS File: Barry.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 25 January 2021',\n",
+       "  '     Last Execution Time: 19:17:16',\n",
+       "  '     Basin: Consensus (Generic)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: Barry',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:'],\n",
+       " ['Run: Gustav',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: Gustav.log',\n",
+       "  '     DSS File: Gustav.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 25 January 2021',\n",
+       "  '     Last Execution Time: 21:05:08',\n",
+       "  '     Basin: Consensus (Generic)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: Gustav',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:'],\n",
+       " ['Run: Isaac',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: Isaac.log',\n",
+       "  '     DSS File: Isaac.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 25 January 2021',\n",
+       "  '     Last Execution Time: 19:39:20',\n",
+       "  '     Basin: Consensus (Generic)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: Isaac',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:'],\n",
+       " ['Run: Katrina',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: Katrina.log',\n",
+       "  '     DSS File: Katrina.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 25 January 2021',\n",
+       "  '     Last Execution Time: 21:24:19',\n",
+       "  '     Basin: Consensus (Generic)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: Katrina',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:'],\n",
+       " ['Run: March 2016',\n",
+       "  '     Default Description: Yes',\n",
+       "  '     Log File: March_2016.log',\n",
+       "  '     DSS File: March_2016.dss',\n",
+       "  '     Is Save Spatial Results: No',\n",
+       "  '     Last Modified Date: 13 January 2023',\n",
+       "  '     Last Modified Time: 16:36:46',\n",
+       "  '     Last Execution Date: 25 January 2021',\n",
+       "  '     Last Execution Time: 21:32:47',\n",
+       "  '     Basin: Consensus (March 2016)',\n",
+       "  '     Precip: Specified Hyetographs',\n",
+       "  '     Control: March 2016',\n",
+       "  '     Time-Series Output: Save All',\n",
+       "  '     Time Series Results Manager Start:',\n",
+       "  '     Time Series Results Manager End:']]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Open .run file\n",
+    "with open(os.path.join(prj_dir,f'{prj_name}.run'), 'r') as r:\n",
+    "    run_file = r.readlines()\n",
+    "run_file = [s.strip('\\n') for s in run_file]\n",
+    "# run_file\n",
     "\n",
-    "sim_json['purpose'] = kv['Project']['Description']\n",
-    "sim_json['description'] = kv['Project']['Description']\n",
-    "sim_json['title'] = f\"{kv['Project']['Title']} HEC-HMS Model\""
+    "line_start = 0\n",
+    "runList = []\n",
+    "for i,v in enumerate(run_file):\n",
+    "        if v == 'End:':\n",
+    "                # If not the beginning of the file, skip a blank line (+1) for the start of the subList.\n",
+    "                if len(runList) > 0:\n",
+    "                        runList.append(run_file[line_start+1:i])\n",
+    "                else:\n",
+    "                        runList.append(run_file[line_start:i])\n",
+    "                line_start = i+1\n",
+    "runList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__Generic_.basin\n",
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__Generic_.basin\n",
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__Generic_.basin\n",
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__Generic_.basin\n",
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__Generic_.basin\n",
+      "Z:/Amite/Amite_LWI/Models/Amite_HMS\\Consensus__March_2016_.basin\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim_kv = {}\n",
+    "for subList in runList:\n",
+    "    # header = subList[0].split(\":\")[0]\n",
+    "    title = subList[0].split(\":\")[1].strip()\n",
+    "    # print(title)\n",
+    "    sim_kv[title] = {}\n",
+    "    findList = ['Basin', 'DSS File', 'Precip', 'Control']\n",
+    "    for find_key in findList:\n",
+    "        found_value = [s for s in subList if find_key in s][0].split(\":\")[1:][0].strip()\n",
+    "        sim_kv[title][find_key] = found_value\n",
+    "        \n",
+    "        # Add data from each simulation's control file.\n",
+    "        if find_key == 'Control':\n",
+    "            control_name = sim_kv[title][find_key].replace(\" \",\"_\").replace(\"(\",\"_\").replace(\")\",\"_\") + '.control'\n",
+    "            control_file = os.path.join(prj_dir, control_name)\n",
+    "            \n",
+    "            with open(control_file, 'r') as c:\n",
+    "                c_file = c.readlines()\n",
+    "            \n",
+    "            c_file  = [s.strip('\\n') for s in c_file]\n",
+    "            c_findList = ['Description', 'Start Date', 'End Date', 'Time Interval']\n",
+    "            \n",
+    "            for c_find_key in c_findList:\n",
+    "                found_value = [s for s in c_file if c_find_key in s][0].split(\":\")[1:][0].strip()\n",
+    "                sim_kv[title][c_find_key] = found_value\n",
+    "        \n",
+    "        # Add data from each simulations's basin file\n",
+    "        if find_key == 'Basin':\n",
+    "            basin_name = sim_kv[title][find_key].replace(\" \",\"_\").replace(\"(\",\"_\").replace(\")\",\"_\") + '.basin'\n",
+    "            basin_file = os.path.join(prj_dir, basin_name)\n",
+    "            print(basin_file)\n",
+    "\n",
+    "\n",
+    "# c_file\n",
+    "# sim_kv\n",
+    "\n"
    ]
   }
  ],
