hms parser completed.

--- a/dev/hms/hms_parser.ipynb
+++ b/dev/hms/hms_parser.ipynb
@@ -1023,6 +1023,27 @@
     "simulation_template_json['description'] = kv['Project']['Description']\n",
     "simulation_template_json['title'] = f\"{kv['Project']['Title']} HEC-HMS Model\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 636,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019-07-02'"
+      ]
+     },
+     "execution_count": 636,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "startDate = datetime.strptime(sim_kv['Barry']['Start Date'], '%d  %B %Y').strftime('%Y-%m-%d')\n",
+    "startDate "
+   ]
   }
  ],
  "metadata": {
