--- a/dev/fia/fia_parser.ipynb
+++ b/dev/fia/fia_parser.ipynb
@@ -1340,33 +1340,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing XML Tag. \"<ConvergenceVariablePath>\" not found in Alternative File: \"C:\\Users\\mmcmanus\\Documents\\Working\\models\\FIA Darlington\\AmiteWatershed_2016Event_WithDarlingtonReservoir\\alternatives/Alternative_August2016_Event_WithReservoir.alternative\"\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[{'value': '0.0', 'parameter': 'Random Seed'},\n",
        " {'value': '0.9', 'parameter': 'Confidence'},\n",
        " {'value': '0.05', 'parameter': 'Convergence Tolerance'},\n",
+       " {'value': 'Total Damage', 'parameter': 'Convergence Variables'},\n",
        " {'value': '25.0', 'parameter': 'Evacuation Velocity'}]"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 510,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Parameters from Alternative file\n",
-    "parameter_tags = ['Random Seed', 'Confidence', 'Convergence Tolerance', 'Convergence Variable', 'Evacuation Velocity']\n",
+    "parameter_tags = ['Random Seed', 'Confidence', 'Convergence Tolerance', 'Convergence Variables', 'Evacuation Velocity']\n",
     "parameter_kv_list = []\n",
     "for tag in parameter_tags:\n",
     "    try:\n",
@@ -1380,7 +1374,7 @@
     "            'parameter': tag\n",
     "        })        \n",
     "    except:\n",
-    "        print(f'Missing XML Tag. \"<{tag_formatted}Path>\" not found in Alternative File: \"{os.path.join(prj_dir, alt_path)}\"')\n",
+    "        print(f'Missing XML Tag. \"<{tag_formatted}>\" not found in Alternative File: \"{os.path.join(prj_dir, alt_path)}\"')\n",
     "        continue\n",
     "parameter_kv_list\n"
    ]
