fia dev completed

--- a/dev/fia/fia_parser.ipynb
+++ b/dev/fia/fia_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 565,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 566,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 567,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 568,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 569,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 571,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 573,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "2                 maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 407,
+     "execution_count": 573,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 574,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 575,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 576,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 577,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "dict_keys(['description', 'keywords', 'title', 'purpose', 'application_date', 'spatial_extent'])"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 577,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 580,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "2                 maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 416,
+     "execution_count": 582,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "2                     maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 419,
+     "execution_count": 585,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "  'location': 'maps/AmiteHUC8_NAD83_Albers.shp'}]"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 586,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 590,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "  'location': 'runs/Alternative_August2016_Event_WithReservoir/August2016_Event_WithReservoir/August2016_Event_TimeWindow/LifeLossResults8PM.shp'}]"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 590,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        " {'value': '25.0', 'parameter': 'Evacuation Velocity'}]"
       ]
      },
-     "execution_count": 510,
+     "execution_count": 591,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,11 +1381,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open simulation template, drop unwanted keys, update values, output json."
+    "# Open Time Window File and Parse Temporal Extent\n",
+    "with open(os.path.join(prj_dir,timewindow_path), 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "lines = [s.strip('\\n') for s in lines]\n",
+    "# get StartTime & EndTime line index\n",
+    "for i, v in enumerate(lines):\n",
+    "    if 'FLD=m_startTime' in v:\n",
+    "        startTime_idx = i + 1\n",
+    "    if 'FLD=m_endTime' in v:\n",
+    "        endTime_idx = i + 1\n",
+    "startTime_hecTime = lines[startTime_idx].split('=')[-1].split(',')[0]\n",
+    "startTime_utc= int(startTime_hecTime) * 24\n",
+    "startTime_dt = datetime.utcfromtimestamp(startTime_utc)\n",
+    "endTime_hecTime = lines[endTime_idx].split('=')[-1].split(',')[0]\n",
+    "endTime_utc= int(endTime_hecTime) * 24\n",
+    "endTime_dt = datetime.utcfromtimestamp(endTime_utc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['description', 'type', 'input_files', 'title', 'temporal_extent', 'output_files', 'parameters'])"
+      ]
+     },
+     "execution_count": 593,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Open simulation template, drop unwanted keys, update values, output json.\n",
+    "with open(r\"simulation_fia_template.json\", 'r') as f:\n",
+    "            sim_template_json = json.load(f)\n",
+    "\n",
+    "# keys to drop from json template\n",
+    "drop_keys = ['_id', 'linked_resources', 'model_application', 'model_software',\n",
+    "              '__created_at', '__created_by', 'temporal_resolution']\n",
+    "for key in drop_keys:\n",
+    "    del sim_template_json[key]\n",
+    "\n",
+    "sim_template_json.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim_template_json['title'] = f'HEC-FIA {prj_name} Simulation: {sim_name}'\n",
+    "sim_template_json['description'] = f'HEC-FIA Simulation: {sim_name}, {sim_description}, for project: {prj_name}, using Alternative: {alt_name}.'\n",
+    "sim_template_json['input_files'] = alt_kv_list\n",
+    "sim_template_json['output_files'] = output_kv_list\n",
+    "sim_template_json['parameters'] = parameter_kv_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output sim json\n",
+    "output_sim_json = os.path.join('./output',f'{prj_name}_{sim_name}_simulation.json')\n",
+    "with open(output_sim_json, \"w\") as outfile:\n",
+    "    json.dump(sim_template_json, outfile)"
    ]
   }
  ],
