fia gui implemented to main.py

--- a/dev/fia/fia_parser.ipynb
+++ b/dev/fia/fia_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AsciiSerializer=4\n",
+      "{=hec2.fia.model.TimeWindow\n",
+      "ID=0\n",
+      "FLD=_index\n",
+      "I=-2147483648\n",
+      "FLD=_name\n",
+      "STR=August2016_Event_TimeWindow\n",
+      "FLD=_description\n",
+      "STR=\n",
+      "FLD=_lastModifiedTime\n",
+      "J=1553545442379\n",
+      "FLD=_createdBy\n",
+      "STR=kslover\n",
+      "FLD=_modifiedBy\n",
+      "STR=kslover\n",
+      "FLD=_createdDate\n",
+      "J=1549043901034\n",
+      "FLD=m_startTime\n",
+      "hec.heclib.util.HecTime=61331760,1\n",
+      "FLD=m_endTime\n",
+      "hec.heclib.util.HecTime=61341840,1\n",
+      "FLD=m_lookbackTime\n",
+      "hec.heclib.util.HecTime=61331759,1\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "keyValueList = copy.deepcopy(lines)  \n",
@@ -70,6 +101,7 @@
     "# Parse the wanted blocks of Manager and Map.\n",
     "nestList = []\n",
     "for i,v in enumerate(lines):\n",
+    "        \n",
     "        if (v == 'ManagerEnd') or (v == 'MapEnd'):\n",
     "                # If not the beginning of the file, skip a blank line (+1) for the start of the subList.\n",
     "                if len(nestList) > 0:\n",
@@ -82,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +275,7 @@
        "2                 maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 573,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,13 +285,13 @@
     "manager_df = pd.DataFrame(manager_kv_list)\n",
     "# manager_df\n",
     "map_df = pd.DataFrame(map_kv_list)\n",
-    "map_df.loc[manager_df.Description == '', 'Description'] = ' '\n",
+    "# map_df.loc[manager_df.Description == '', 'Description'] = ' '\n",
     "map_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +355,7 @@
        "dict_keys(['description', 'keywords', 'title', 'purpose', 'application_date', 'spatial_extent'])"
       ]
      },
-     "execution_count": 577,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +500,7 @@
        "2                 maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 582,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1018,7 @@
        "2                     maps/AmiteHUC8_NAD83_Albers.shp  "
       ]
      },
-     "execution_count": 585,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1134,17 +1166,17 @@
        "  'description': ' ',\n",
        "  'location': 'simulation/Simulation_DS_14inch_WithReservoir.simulation'},\n",
        " {'title': 'Amite_StructureInventory_NAD83_Albers.shp',\n",
-       "  'description': ' ',\n",
+       "  'description': '',\n",
        "  'location': 'maps/Amite_StructureInventory_NAD83_Albers.shp'},\n",
        " {'title': 'AmiteParishes_NAD83_Albers.shp',\n",
-       "  'description': ' ',\n",
+       "  'description': '',\n",
        "  'location': 'maps/AmiteParishes_NAD83_Albers.shp'},\n",
        " {'title': 'AmiteHUC8_NAD83_Albers.shp',\n",
-       "  'description': ' ',\n",
+       "  'description': '',\n",
        "  'location': 'maps/AmiteHUC8_NAD83_Albers.shp'}]"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1349,7 @@
        "  'location': 'runs/Alternative_August2016_Event_WithReservoir/August2016_Event_WithReservoir/August2016_Event_TimeWindow/LifeLossResults8PM.shp'}]"
       ]
      },
-     "execution_count": 590,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1385,7 @@
        " {'value': '25.0', 'parameter': 'Evacuation Velocity'}]"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1447,7 @@
        "dict_keys(['description', 'type', 'input_files', 'title', 'temporal_extent', 'output_files', 'parameters'])"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
