go-consequences headless implementation complete.

--- a/dev/go-consequences/go-consequences_parser.ipynb
+++ b/dev/go-consequences/go-consequences_parser.ipynb
@@ -106,11 +106,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Simulation Name</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Structure Inventory File</th>\n",
+       "      <th>WSE File</th>\n",
+       "      <th>Model Result Output File</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Katrina (2005)</td>\n",
+       "      <td>Amite LWI HEC-RAS Model results for Hurricane ...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/output/Amite_Katrina200...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Issac (2012)</td>\n",
+       "      <td>Amite LWI HEC-RAS Model results for Hurricane ...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/output/Amite_Isaac2012_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gustav (2008)</td>\n",
+       "      <td>Amite LWI HEC-RAS Model results for Hurricane ...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/dev/go-consequences/dat...</td>\n",
+       "      <td>C:/py/hec_meta_extract/output/Amite_Gustav2008...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Simulation Name                                        Description   \n",
+       "0  Katrina (2005)  Amite LWI HEC-RAS Model results for Hurricane ...  \\\n",
+       "1    Issac (2012)  Amite LWI HEC-RAS Model results for Hurricane ...   \n",
+       "2   Gustav (2008)  Amite LWI HEC-RAS Model results for Hurricane ...   \n",
+       "\n",
+       "                            Structure Inventory File   \n",
+       "0  C:/py/hec_meta_extract/dev/go-consequences/dat...  \\\n",
+       "1  C:/py/hec_meta_extract/dev/go-consequences/dat...   \n",
+       "2  C:/py/hec_meta_extract/dev/go-consequences/dat...   \n",
+       "\n",
+       "                                            WSE File   \n",
+       "0  C:/py/hec_meta_extract/dev/go-consequences/dat...  \\\n",
+       "1  C:/py/hec_meta_extract/dev/go-consequences/dat...   \n",
+       "2  C:/py/hec_meta_extract/dev/go-consequences/dat...   \n",
+       "\n",
+       "                            Model Result Output File  \n",
+       "0  C:/py/hec_meta_extract/output/Amite_Katrina200...  \n",
+       "1  C:/py/hec_meta_extract/output/Amite_Isaac2012_...  \n",
+       "2  C:/py/hec_meta_extract/output/Amite_Gustav2008...  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "run_table_df = pd.read_csv(r\"C:\\py\\hec_meta_extract\\example\\input\\go-consequences\\run_table.csv\")\n",
+    "run_table_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp\n",
+      "C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp\n",
+      "C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer in run_table_df['Structure Inventory File'].values:\n",
+    "    print(layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Simulation Name', 'Description', 'Structure Inventory File',\n",
+       "       'WSE File', 'Model Result Output File'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# C:\\py\\hec_meta_extract\\dev\\go-consequences\\data\\NSI.shp\n",
+    "run_table_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp',\n",
+       " 'C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp',\n",
+       " 'C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "run_table_df['Structure Inventory File Exists'] = run_table_df['Structure Inventory File'].apply(lambda x: os.path.exists(x))\n",
+    "# run_table_df['Structure Inventory File Exists'].values\n",
+    "run_table_df[run_table_df['Structure Inventory File Exists'] == True]['Structure Inventory File'].tolist()"
    ]
   }
  ],
